<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/root_scroll_tv"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.DetailTvActivity">

        <ImageView
            android:id="@+id/iv_backdrop_tv"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:contentDescription="@string/movie_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/favorite_tv"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_unfavorite"
            android:contentDescription="@string/favorite_button" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_overview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.361" />

        <TextView
            android:id="@+id/tv_movie_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/movie_poster_tv"
            app:layout_constraintTop_toTopOf="@+id/view2"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/tv_movie_overview_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/label_years2"
            app:layout_constraintTop_toBottomOf="@+id/label_years2"
            tools:text="this is an example for an overview of movie" />

        <TextView
            android:id="@+id/label_years"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview_tv" />

        <TextView
            android:id="@+id/label_years2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/summary"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster_tv" />

        <TextView
            android:id="@+id/tv_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_years"
            tools:text="2021" />

        <ImageView
            android:id="@+id/movie_poster_tv"
            android:layout_width="125dp"
            android:layout_height="250dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/movie_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_backdrop_tv"
            tools:srcCompat="@tools:sample/avatars" />

        <RatingBar
            android:id="@+id/movie_rating_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:isIndicator="true"
            android:numStars="5"
            android:scaleX=".3"
            android:scaleY=".3"
            android:stepSize=".1"
            android:theme="@style/RatingBar"
            android:transformPivotX="0dp"
            android:transformPivotY="0dp"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title_tv"
            tools:rating="0.3" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
