<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_movies"
        android:enabled="true"
        android:icon="@drawable/ic_movies"
        android:title="@string/movies" />

    <item
        android:id="@+id/menu_tv"
        android:enabled="true"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/tv_show" />

    <item
        android:id="@+id/menu_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />
</menu>